fix strange behavior on document close after restore

aggregate all registered documents & views in view space (LRU ordered)
we need even the documents without tabs to avoid that we later have issues with closing
documents and not the right ones being used as replacement if you have a limit on tabs

BUG: 487034